# XQProgressBar

./: .clang-format  .gitignore  CMakeLists.txt  README.md
design/: mainwindow.ui
include/: CircularProgress.hpp  CircularProgressBar.hpp  GradientColorEditor.hpp  MainWindow.hpp  mainwindow.h
lib/: CMakeLists.txt
lib/include/: CircularProgressBar.hpp
lib/src/: CircularProgressBar.cpp
src/: CircularProgress.cpp  CircularProgressBar.cpp  GradientColorEditor.cpp  MainWindow.cpp  main.cpp  mainwindow.cpp
